--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,22 @@
 .App {
   text-align: center;
   background-image: url("assets/background.png");
-  background: #424242;
+  background: #292929;
   width: 100vw;
   height: 100vh;
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+  color: #d7d7d7;
+}
+
 .container {
-  padding: 1vh 2vw;
-  background-color: #A3A3A3;
+  margin: 2vh 2vw;
+  padding: 1vh 1vw;
+  background-color: #242424;
+}
+
+.filter {
+  background-color: #2b2b2b;
+  padding: 1vw 1vh;
 }
