--- a/src/components/user/Users.css
+++ b/src/components/user/Users.css
@@ -3,11 +3,15 @@
 }
 
 .ui.selectable.table tbody tr.user-row.user-role-pbn:hover {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 52, 148, 0.8) 100%, transparent 75%) !important;
+    background: linear-gradient(to left, transparent, transparent 50%, rgba(153, 91, 165, 0.8) 100%, transparent 75%) !important;
 }
 
 .ui.selectable.table tbody tr.user-row.user-role-nat:hover {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 78, 75, 0.8) 100%, transparent 75%) !important;
+    background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 61, 60, 0.8) 100%, transparent 75%) !important;
+}
+
+.ui.selectable.table tbody tr.user-row.user-role-rc:hover {
+    background: linear-gradient(to left, transparent, transparent 50%, rgba(105, 105, 105, 0.8) 100%, transparent 75%) !important;
 }
 
 .user-row.user-role-bn {
@@ -15,11 +19,15 @@
 }
 
 .user-row.user-role-pbn {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 52, 148, 0.5) 100%, transparent 75%);
+    background: linear-gradient(to left, transparent, transparent 50%, rgba(153, 91, 165, 0.5) 100%, transparent 75%);
 }
 
 .user-row.user-role-nat {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 78, 75, 0.5) 100%, transparent 75%);
+    background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 61, 60, 0.5) 100%, transparent 75%);
+}
+
+.user-row.user-role-ca {
+    background: linear-gradient(to left, transparent, transparent 50%, rgba(105, 105, 105, 0.5) 100%, transparent 75%);
 }
 
 .ui.label.user-role-bn {
@@ -28,18 +36,39 @@
 }
 
 .ui.label.user-role-pbn {
-    background-color: #a53494 !important;
+    background-color: #995ba5 !important;
     color: #d7d7d7 !important;
 }
 
 .ui.label.user-role-nat {
-    background-color: #a54e4b !important;
+    background-color: #a53d3c !important;
     color: #d7d7d7 !important;
 }
 
-.ui.label.user-role-observer {
-    background-color: #a5a5a5 !important;
-    color: #242424 !important;
+.ui.label.user-role-ca {
+    background-color: #555555 !important;
+    color: #d7d7d7 !important;
+}
+
+.user-avatar {
+    padding: 2px;
+    border-radius: 5px;
+}
+
+.user-role-bn-text {
+    background-color: #7249a5 !important;
+}
+
+.user-role-pbn-text {
+    background-color: #995ba5 !important;
+}
+
+.user-role-nat-text {
+    background-color: #a53d3c !important;
+}
+
+.user-role-ca-text  {
+    background-color: #696969 !important;
 }
 
 .user-banner {
