--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
     width: 100vw;
 }
 
-p, h1, h2, h3, h4, h5, h6,
+p, h1, h2, h3, h4, h5, h6, div,
 div.field .ui.toggle.checkbox input:checked~label, label {
     color: #d7d7d7 !important;
 }
@@ -70,4 +70,9 @@ div.field .ui.toggle.checkbox input:checked~label, label {
 .scrollable-list {
     height: 60vh;
     overflow-y: scroll;
+}
+
+.login-form {
+    padding-left: 3vw !important;
+    padding-right: 3vw !important;
 }
