--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,13 @@ body {
     width: 100vw;
 }
 
-p, h1, h2, h3, h4, h5, h6, div,
+p, h1, h2, h3, h4, h5, h6, .text, div.text,
 div.field .ui.toggle.checkbox input:checked~label, label {
     color: #d7d7d7 !important;
+}
+
+div div.text {
+    color: rgba(0,0,0,.87) !important
 }
 
 .base-container-large {
@@ -65,6 +69,10 @@ div.field .ui.toggle.checkbox input:checked~label, label {
 
 .error-message > .content > p {
     color: #9f3a38 !important;
+}
+
+.info-message > .content > p {
+    color: #0e566c !important;
 }
 
 .scrollable-list {
