--- a/src/components/user/Users.css
+++ b/src/components/user/Users.css
@@ -50,6 +50,10 @@
     color: #d7d7d7 !important;
 }
 
+.ui.label.user-role-observer, .item.user-role-observer, .item.user-role-observer > span.text {
+    color: rgba(0,0,0,.87) !important
+}
+
 .user-avatar {
     padding: 2px;
     border-radius: 5px;
