--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,7 @@ div div.text {
     padding-left: 3vw !important;
     padding-right: 3vw !important;
 }
+
+.ui.form .disabled.field, .ui.form .disabled.fields .field, .ui.form .field :disabled {
+    opacity: 1 !important;
+}
