Implemented feedback from Deif and Secre

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html, body {
 
 body {
     background-image: url("assets/background.png") !important;
+    background-attachment: fixed !important;
 }
 
 .App {
