--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,20 @@ body {
 }
 
 .App {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     width: 100vw;
+    min-height: 100vh;
+}
+
+.not-found-page {
+    z-index: -1;
+    position:absolute;
+    width: 100vw;
+    height: 100vh;
+    margin: unset !important;
+    justify-content: center;
 }
 
 p, h1, h2, h3, h4, h5, h6, .text, div.text,
