--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
 }
 
 p, h1, h2, h3, h4, h5, h6, .text, div.text,
-div.field .ui.toggle.checkbox input:checked~label, label {
+div.field .ui.toggle.checkbox input:checked~label, label, div div div.header-text {
     color: #d7d7d7 !important;
 }
 
