--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,17 @@ body {
 }
 
 p, h1, h2, h3, h4, h5, h6, .text, div.text,
-div.field .ui.toggle.checkbox input:checked~label, label, div div div.header-text {
+div.field .ui.toggle.checkbox input:checked~label, label, div div div.header-text,
+.ui.indicating .label, .ui.indicating .label {
     color: #d7d7d7 !important;
+}
+
+div.dropdown .menu .item .icon {
+    color: rgba(38, 38, 38, 0.9) !important
+}
+
+div.dropdown .menu .item .text {
+    color: rgba(28, 28, 28, 0.95) !important;
 }
 
 div div.text {
@@ -101,4 +110,12 @@ div div.text {
 
 .ui.form .disabled.field, .ui.form .disabled.fields .field, .ui.form .field :disabled {
     opacity: 1 !important;
+}
+
+.ui.form .disabled.field textarea {
+    opacity: 0.45 !important;
+}
+
+.fullOverlay {
+    width: 50vw;
 }
