--- a/src/components/beatmaps/BeatmapFilter.css
+++ b/src/components/beatmaps/BeatmapFilter.css
@@ -1,5 +1,6 @@
 .ui.popup>  .ui.grid.filter-settings-popup {
-    width: 400px;
+    width: max-content;
+    max-width: 700px;
 }
 
 .ui.popup>  .ui.grid.filter-settings-popup .row {
