--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,13 @@
+@import "Colours";
+
 html, body {
     height: 100%;
 }
 
 body {
-    background-image: url("assets/background.png") !important;
-    background-attachment: fixed !important;
+    /*background-image: url("assets/background.png") !important;
+    background-attachment: fixed !important;*/
+    background-color: $background-colour-bg;
 }
 
 .App {
@@ -27,20 +30,20 @@ body {
 p, h1, h2, h3, h4, h5, h6, .text, div.text,
 div.field .ui.toggle.checkbox input:checked~label, label, div div div.header-text,
 .ui.indicating .label, .ui.indicating .label {
-    color: #d7d7d7 !important;
+    color: $text-colour !important;
 }
 
 div.dropdown .menu .item .icon {
-    color: rgba(38, 38, 38, 0.9) !important
+    color: $text-colour-dark !important
 }
 
 div.dropdown .menu .item .text {
-    color: rgba(28, 28, 28, 0.95) !important;
+    color: $text-colour-dark !important;
 }
 
-/*div div.text {
+div.ui.selection.dropdown div.text {
     color: rgba(0,0,0,.87) !important
-}*/
+}
 
 .base-container-large {
     max-width: 1600px !important;
@@ -52,7 +55,7 @@ div.dropdown .menu .item .text {
     align-self: center;
     margin: 2vh auto;
     padding: 1vh 1vw;
-    background-color: #242424;
+    background-color: $background-colour-darker;
 }
 
 .base-container-small {
@@ -60,17 +63,16 @@ div.dropdown .menu .item .text {
 }
 
 .filter {
-    background-color: #2b2b2b;
+    background-color: $background-colour-darker;
     padding: 1vw 1vh;
 }
 
 .ui.modal {
-    background-color: #242424 !important;
+    background-color: $background-colour-darker !important;
 }
 
 .ui.modal > .modal-header > .header {
-    /*background-color: #242424 !important;*/
-    color: #d7d7d7 !important;
+    color: $text-colour !important;
     padding: calc(2rem - 0.142857em);
     margin: 0;
 }
@@ -79,7 +81,6 @@ div.dropdown .menu .item .text {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    /*margin: 1vh 1vw;*/
 }
 
 .ui.modal > .modal-header > .modal-header-image {
@@ -92,21 +93,21 @@ div.dropdown .menu .item .text {
 }
 
 .ui.modal > .content {
-    background-color: #2b2b2b !important;
-    color: #d7d7d7;
+    background-color: $background-colour !important;
+    color: $text-colour;
 }
 
 .ui.modal > .actions {
-    background-color: #242424 !important;
-    color: #d7d7d7;
+    background-color: $background-colour-dark !important;
+    color: $text-colour;
 }
 
 .error-message > .content > p {
-    color: #9f3a38 !important;
+    color: $error-colour !important;
 }
 
 .info-message > .content > p {
-    color: #0e566c !important;
+    color: $info-colour !important;
 }
 
 .scrollable-list {
@@ -129,4 +130,8 @@ div.dropdown .menu .item .text {
 
 .fullOverlay {
     width: 50vw;
+}
+
+.ui.inverted.table {
+    background-color: $background-colour;
 }
