--- a/src/components/tournament/moddingDiscussion/ModdingDiscussion.scss
+++ b/src/components/tournament/moddingDiscussion/ModdingDiscussion.scss
@@ -1,6 +1,9 @@
+@import "./src/Colours";
+
 .beatmap-discussion-title {
-    color: #d7d7d7;
-    background-color: #323232;
+    color: $text-colour;
+    background-color: $background-colour-dark;
+    /*background-color: #222831;*/
     font-size: 20px;
     padding: 20px;
     text-align: left;
@@ -8,16 +11,16 @@
 }
 
 .beatmap-discussion-container {
-    background-color: #2b2b2b;
+    background-color: $background-colour;
     padding: 10px 20px;
 }
 
 .beatmap-discussion-status {
-    width: max-content;
+    width: 90px;
     margin-right: 10px;
     margin-top: auto;
     margin-bottom: auto;
-    color: #d7d7d7;
+    color: $text-colour;
 }
 
 .beatmap-discussion-author {
@@ -46,7 +49,7 @@
 }
 
 .beatmap-discussion-username.user-role-bn {
-    color: #7249a5;
+    color: $bn-colour;
 }
 
 .beatmap-discussion-username.user-role-pbn {
@@ -64,7 +67,7 @@
 
 .beatmap-discussion-stripe {
     width: 2px;
-    background-color: #d7d7d7;
+    background-color: $text-colour;
 }
 
 .beatmap-discussion-content {
@@ -86,31 +89,36 @@
 }
 
 .beatmap-disussion-osulink {
-    background-color: #2b2b2b;
+    background-color: $background-colour-darker;
     padding: 2px;
     border-radius: 5px;
-    color: #8e95a8;
+    color: $text-colour-link;
 }
 
 .beatmap-discussion-group {
     display: flex;
+    margin-bottom: 10px;
 }
 
 .beatmap-discussion-item-group {
     width: 100%;
-    color: #d7d7d7;
+    color: $text-colour;
+}
+
+.beatmap-discussion-resolved {
+    box-shadow: -5px 0 0 0 $confirm-colour;
 }
 
 .beatmap-discussion-item-top {
     padding: 10px 15px;
     display: flex;
-    background-color: #323232;
+    background-color: $background-colour-dark;
     text-align: left;
     font-size: 15px;
 }
 
 .beatmap-discussion-main-actions {
-    background-color: #393939;
+    background-color: $background-colour-light;
     text-align: right;
     padding-right: 10px;
     padding-bottom: 10px;
@@ -120,7 +128,7 @@
 .beatmap-discussion-item {
     padding: 10px 15px 10px 60px;
     display: flex;
-    background-color: #393939;
+    background-color: $background-colour-light;
     text-align: left;
     font-size: 15px;
 }
@@ -132,8 +140,8 @@
 .beatmap-discussion-response-textarea {
     width: 100%;
     min-height: 100px;
-    background-color: #2b2b2b;
-    color: #d7d7d7;
+    background-color: $background-colour-dark;
+    color: $text-colour;
 
     border: none;
     overflow: auto;
@@ -144,4 +152,25 @@
     box-shadow: none;
 
     resize: none;
+}
+
+.beatmap-discussion-section {
+    margin-bottom: 10px;
+}
+
+.beatmap-info-item {
+    display: flex;
+}
+
+.beatmap-info-item .label {
+    color: $text-colour;
+    text-align: right;
+    font-weight: bold;
+    font-size: 15px;
+    width: 90px;
+    padding-right: 10px;
+}
+
+.beatmap-info-item .text {
+    padding-left: 15px;
 }
