--- a/src/components/tournament/moddingDiscussion/ModdingDiscussion.scss
+++ b/src/components/tournament/moddingDiscussion/ModdingDiscussion.scss
@@ -74,6 +74,15 @@
     width: 70%;
 }
 
+.beatmap-discussion-content-actions {
+    height: max-content;
+}
+
+.beatmap-discussion-content-action {
+    margin: 0 5px;
+    font-size: 13px;
+}
+
 .beatmap-discussion-content-full {
     width: 100%;
 }
@@ -114,7 +123,11 @@
     display: flex;
     background-color: $background-colour-dark;
     text-align: left;
-    font-size: 15px;
+    font-size: 16px;
+}
+
+.beatmap-discussion-main-edit {
+    text-align: right;
 }
 
 .beatmap-discussion-main-actions {
@@ -130,7 +143,7 @@
     display: flex;
     background-color: $background-colour-light;
     text-align: left;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 .beatmap-discussion-item-reply {
