--- a/src/Colours.scss
+++ b/src/Colours.scss
@@ -1,6 +1,6 @@
 $text-colour: #d7d7d7;
 $text-colour-dark: #262626;
-$text-colour-link: #8e95a8;
+$text-colour-link: #729ca8;
 
 $error-colour: #9f3a38;
 $info-colour: #0e566c;
