--- a/src/components/beatmaps/Beatmaps.scss
+++ b/src/components/beatmaps/Beatmaps.scss
@@ -90,7 +90,7 @@ tr.beatmap-row td.beatmap-nominator .nominated {
 
 @media (max-width: 767px) {
     .beatmap-banner {
-        min-width: 100vw;
+        min-width: 100%;
     }
 }
 
