--- a/src/components/tournament/moddingDiscussion/ModdingDiscussion.scss
+++ b/src/components/tournament/moddingDiscussion/ModdingDiscussion.scss
@@ -1,79 +1,114 @@
 @import "./src/Colours";
 
-.beatmap-discussion-title {
-    color: $text-colour;
-    background-color: $background-colour-dark;
-    /*background-color: #222831;*/
-    font-size: 20px;
-    padding: 20px;
-    text-align: left;
-    font-weight: bold;
-}
+.beatmap-discussion-section {
+    margin-bottom: 10px;
 
-.beatmap-discussion-container {
-    background-color: $background-colour;
-    padding: 10px 20px;
-}
+    .beatmap-discussion-title {
+        color: $text-colour;
+        background-color: $background-colour-dark;
+        font-size: 20px;
+        padding: 20px;
+        text-align: left;
+        font-weight: bold;
+    }
 
-.beatmap-discussion-status {
-    width: 90px;
-    margin-right: 10px;
-    margin-top: auto;
-    margin-bottom: auto;
-    color: $text-colour;
+    .beatmap-discussion-container {
+        background-color: $background-colour;
+        padding: 10px 20px;
+
+        .beatmap-info {
+            .beatmap-info-item {
+                display: flex;
+
+                .label {
+                    color: $text-colour;
+                    text-align: right;
+                    font-weight: bold;
+                    font-size: 15px;
+                    width: 90px;
+                    padding-right: 10px;
+                }
+
+                .text {
+                    padding-left: 15px;
+                }
+            }
+        }
+    }
 }
 
 .beatmap-discussion-author {
     width: max-content;
     display: flex;
     margin-right: 10px;
-}
 
-.beatmap-discussion-username-profile {
-    min-width: 100px;
-    font-weight: bold;
-}
 
-.beatmap-discussion-username {
-    margin-bottom: 2px;
-}
+    .beatmap-discussion-avatar {
+        width: 40px;
+        height: 40px;
+        margin-right: 10px;
 
-.beatmap-discussion-label {
-    height: fit-content;
-    padding: 5px !important;
-    font-size: 10px !important;
-}
+        .beatmap-discussion-avatar-image {
+            border-radius: 5px;
+        }
+    }
 
-.beatmap-discussion-username.user-role-nat {
-    color: #a53d3c;
-}
+    .beatmap-discussion-username-profile {
+        min-width: 100px;
+        font-weight: bold;
 
-.beatmap-discussion-username.user-role-bn {
-    color: $bn-colour;
-}
+        .beatmap-discussion-username {
+            margin-bottom: 2px;
+        }
 
-.beatmap-discussion-username.user-role-pbn {
-    color: #995ba5;
-}
+        .beatmap-discussion-username.user-role-nat {
+            color: #a53d3c;
+        }
 
-.beatmap-discussion-username.user-role-ca  {
-    color: #a0a0a0;
-}
+        .beatmap-discussion-username.user-role-bn {
+            color: $bn-colour;
+        }
 
-.beatmap-discussion-stripe.user-role-nat {
-    width: 2px;
-    background-color: #a53d3c;
-}
+        .beatmap-discussion-username.user-role-pbn {
+            color: #995ba5;
+        }
 
-.beatmap-discussion-stripe {
-    width: 2px;
-    background-color: $text-colour;
+        .beatmap-discussion-username.user-role-rc  {
+            color: #a0a0a0;
+        }
+
+        .beatmap-discussion-label {
+            height: fit-content;
+            padding: 5px !important;
+            font-size: 10px !important;
+        }
+    }
+
+    .beatmap-discussion-stripe {
+        width: 2px;
+        background-color: $text-colour;
+    }
+
+    .beatmap-discussion-stripe.user-role-nat {
+        background-color: $nat-colour;
+    }
+
+    .beatmap-discussion-stripe.user-role-bn {
+        background-color: $bn-colour;
+    }
+
+    .beatmap-discussion-stripe.user-role-pbn {
+        background-color: $pbn-colour;
+    }
+
+    .beatmap-discussion-stripe.user-role-rc {
+        background-color: $rc-colour;
+    }
 }
 
 .beatmap-discussion-content {
     width: 70%;
 }
-
 
 .beatmap-discussion-content-actions {
     height: max-content;
@@ -89,16 +124,6 @@
     width: 100%;
 }
 
-.beatmap-discussion-avatar {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-}
-
-.beatmap-discussion-avatar-image {
-    border-radius: 5px;
-}
-
 .beatmap-disussion-osulink {
     background-color: $background-colour-darker;
     padding: 2px;
@@ -109,27 +134,52 @@
 .beatmap-discussion-group {
     display: flex;
     margin-bottom: 10px;
+
+    .beatmap-discussion-status {
+        width: 90px;
+        margin-right: 10px;
+        margin-top: auto;
+        margin-bottom: auto;
+        color: $text-colour;
+    }
+
+    .beatmap-discussion-resolved {
+        box-shadow: -5px 0 0 0 $confirm-colour;
+    }
+
+    .beatmap-discussion-group-item {
+        width: 100%;
+        color: $text-colour;
+
+        .beatmap-discussion-item-top {
+            padding: 10px 15px;
+            display: flex;
+            background-color: $background-colour-dark;
+            text-align: left;
+            font-size: 16px;
+        }
+
+        .beatmap-discussion-main-edit {
+            text-align: right;
+        }
+    }
 }
 
-.beatmap-discussion-item-group {
+.beatmap-discussion-response-textarea {
     width: 100%;
-    color: $text-colour;
-}
-
-.beatmap-discussion-resolved {
-    box-shadow: -5px 0 0 0 $confirm-colour;
-}
-
-.beatmap-discussion-item-top {
-    padding: 10px 15px;
-    display: flex;
+    min-height: 100px;
     background-color: $background-colour-dark;
-    text-align: left;
-    font-size: 16px;
-}
+    color: $text-colour;
 
-.beatmap-discussion-main-edit {
-    text-align: right;
+    border: none;
+    overflow: auto;
+    outline: none;
+
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+    resize: none;
 }
 
 .beatmap-discussion-main-actions {
@@ -150,42 +200,4 @@
 
 .beatmap-discussion-item-reply {
     padding-right: .25em;
-}
-
-.beatmap-discussion-response-textarea {
-    width: 100%;
-    min-height: 100px;
-    background-color: $background-colour-dark;
-    color: $text-colour;
-
-    border: none;
-    overflow: auto;
-    outline: none;
-
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-
-    resize: none;
-}
-
-.beatmap-discussion-section {
-    margin-bottom: 10px;
-}
-
-.beatmap-info-item {
-    display: flex;
-}
-
-.beatmap-info-item .label {
-    color: $text-colour;
-    text-align: right;
-    font-weight: bold;
-    font-size: 15px;
-    width: 90px;
-    padding-right: 10px;
-}
-
-.beatmap-info-item .text {
-    padding-left: 15px;
 }
