--- a/src/App.scss
+++ b/src/App.scss
@@ -139,3 +139,34 @@ div.ui.selection.dropdown div.text {
 .ui.inverted.table {
     background-color: $background-colour;
 }
+
+@media (max-width: 767px) {
+    .modal {
+        .content {
+            .ui.grid {
+                .row {
+                    div {
+                        padding-bottom: 5px;
+                    }
+                }
+            }
+        }
+    }
+
+    .ui.fluid.buttons {
+        padding-bottom: 5px;
+    }
+
+    .ui.popup > .ui.grid.filter-settings-popup {
+        width: 80vw;
+
+        .row {
+            padding-bottom: 5px;
+
+            .column {
+                margin: 2px 10px;
+            }
+        }
+    }
+
+}
