--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -6,3 +6,12 @@
     padding-left: 2vw;
     padding-right: 2vw;
 }
+
+.mobile-menu-right {
+    margin-right: 5px;
+}
+
+.mobile-menu-sidebar.menu {
+    background-color: $background-colour !important;
+    box-shadow: 1px 0 0 0 rgba(255,255,255,.08) !important;
+}
