--- a/src/App.scss
+++ b/src/App.scss
@@ -150,7 +150,7 @@ div.ui.selection.dropdown div.text {
     .section-title {
         color: $text-colour;
         background-color: $background-colour-dark;
-        font-size: 20px;
+        font-size: 1.8em;
         padding: 20px;
         text-align: left;
         font-weight: bold;
@@ -163,6 +163,11 @@ div.ui.selection.dropdown div.text {
 }
 
 @media (max-width: 767px) {
+
+    .base-container {
+        width: 100%;
+        margin: 2vh 0;
+    }
 
     .pushable {
         overflow-x: hidden;
