cleanedup on almost all components

--- a/src/components/beatmaps/BeatmapEventList.css
+++ b/src/components/beatmaps/BeatmapEventList.css
@@ -15,6 +15,6 @@
 }
 
 .event-list {
-    border: 1px solid rgba(255,255,255,.1);
+    border: 1px solid rgba(255, 255, 255, .1);
     border-radius: 2px;
 }
