--- a/src/components/user/Users.scss
+++ b/src/components/user/Users.scss
@@ -1,88 +1,88 @@
 @import "src/Colours";
 
 .ui.selectable.table tbody tr.user-row.user-role-bn:hover {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(114, 73, 165, 0.8) 100%, transparent 75%) !important;
+  background: linear-gradient(to left, transparent, transparent 50%, rgba(114, 73, 165, 0.8) 100%, transparent 75%) !important;
 }
 
 .ui.selectable.table tbody tr.user-row.user-role-pbn:hover {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(153, 91, 165, 0.8) 100%, transparent 75%) !important;
+  background: linear-gradient(to left, transparent, transparent 50%, rgba(153, 91, 165, 0.8) 100%, transparent 75%) !important;
 }
 
 .ui.selectable.table tbody tr.user-row.user-role-nat:hover {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 61, 60, 0.8) 100%, transparent 75%) !important;
+  background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 61, 60, 0.8) 100%, transparent 75%) !important;
 }
 
 .ui.selectable.table tbody tr.user-row.user-role-rc:hover {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(105, 105, 105, 0.8) 100%, transparent 75%) !important;
+  background: linear-gradient(to left, transparent, transparent 50%, rgba(105, 105, 105, 0.8) 100%, transparent 75%) !important;
 }
 
 .user-row.user-role-bn {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(114, 73, 165, 0.5) 100%, transparent 75%);
+  background: linear-gradient(to left, transparent, transparent 50%, rgba(114, 73, 165, 0.5) 100%, transparent 75%);
 }
 
 .user-row.user-role-pbn {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(153, 91, 165, 0.5) 100%, transparent 75%);
+  background: linear-gradient(to left, transparent, transparent 50%, rgba(153, 91, 165, 0.5) 100%, transparent 75%);
 }
 
 .user-row.user-role-nat {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 61, 60, 0.5) 100%, transparent 75%);
+  background: linear-gradient(to left, transparent, transparent 50%, rgba(165, 61, 60, 0.5) 100%, transparent 75%);
 }
 
 .user-row.user-role-rc {
-    background: linear-gradient(to left, transparent, transparent 50%, rgba(105, 105, 105, 0.5) 100%, transparent 75%);
+  background: linear-gradient(to left, transparent, transparent 50%, rgba(105, 105, 105, 0.5) 100%, transparent 75%);
 }
 
 .ui.label.user-role-bn, .ui.form .ui.dropdown div.menu div.item.user-role-bn, .ui.form .field.error .ui.dropdown div.menu div.item.user-role-bn, .ui.dropdown div .item.user-role-bn > span.text {
-    background-color: $bn-colour !important;
-    color: #d7d7d7 !important;
+  background-color: $bn-colour !important;
+  color: #d7d7d7 !important;
 }
 
 .ui.label.user-role-pbn, .ui.form .ui.dropdown div.menu div.item.user-role-pbn, .ui.form .field.error .ui.dropdown div.menu div.item.user-role-pbn, .ui.dropdown div .item.user-role-pbn > span.text {
-    background-color: $pbn-colour !important;
-    color: #d7d7d7 !important;
+  background-color: $pbn-colour !important;
+  color: #d7d7d7 !important;
 }
 
 .ui.label.user-role-nat, .ui.form .ui.dropdown div.menu div.item.user-role-nat, .ui.form .field.error .ui.dropdown div.menu div.item.user-role-nat, .ui.dropdown div .item.user-role-nat > span.text {
-    background-color: $nat-colour !important;
-    color: #d7d7d7 !important;
+  background-color: $nat-colour !important;
+  color: #d7d7d7 !important;
 }
 
 .ui.label.user-role-rc, .ui.form .ui.dropdown div.menu div.item.user-role-rc, .ui.form .field.error .ui.dropdown div.menu div.item.user-role-rc, .ui.dropdown div .item.user-role-rc > span.text {
-    background-color: $rc-colour !important;
-    color: #d7d7d7 !important;
+  background-color: $rc-colour !important;
+  color: #d7d7d7 !important;
 }
 
 .ui.label.user-role-observer, .item.user-role-observer, .item.user-role-observer > span.text {
-    color: rgba(0,0,0,.87) !important
+  color: rgba(0, 0, 0, .87) !important
 }
 
 .user-avatar {
-    padding: 2px;
-    border-radius: 5px;
+  padding: 2px;
+  border-radius: 5px;
 }
 
 .user-role-bn-text {
-    background-color: $bn-colour !important;
+  background-color: $bn-colour !important;
 }
 
 .user-role-pbn-text {
-    background-color: #995ba5 !important;
+  background-color: #995ba5 !important;
 }
 
 .user-role-nat-text {
-    background-color: #a53d3c !important;
+  background-color: #a53d3c !important;
 }
 
-.user-role-rc-text  {
-    background-color: #696969 !important;
+.user-role-rc-text {
+  background-color: #696969 !important;
 }
 
 .user-banner {
-    max-width: 64px !important;
-    max-height: 64px;
-    border-radius: 5px;
+  max-width: 64px !important;
+  max-height: 64px;
+  border-radius: 5px;
 }
 
 .users-page {
-    max-width: 80vw;
+  max-width: 80vw;
 }
