--- a/src/App.scss
+++ b/src/App.scss
@@ -1,204 +1,202 @@
 @import "Colours";
 
 html, body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    /*background-image: url("assets/background.png") !important;
-    background-attachment: fixed !important;*/
-    background-color: $background-colour-bg;
+  background-color: $background-colour-bg;
 }
 
 .App {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 100vw;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100vw;
+  min-height: 100vh;
 }
 
 .not-found-page {
-    z-index: -1;
-    position:absolute;
-    width: 100vw;
-    height: 100vh;
-    margin: unset !important;
-    justify-content: center;
+  z-index: -1;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  margin: unset !important;
+  justify-content: center;
 }
 
 a, .link {
-    color: $text-colour-link
+  color: $text-colour-link
 }
 
 p, h1, h2, h3, h4, h5, h6, .text, div.text,
-div.field .ui.toggle.checkbox input:checked~label, label, div div div.header-text,
+div.field .ui.toggle.checkbox input:checked ~ label, label, div div div.header-text,
 .ui.indicating .label, .ui.indicating .label {
-    color: $text-colour !important;
+  color: $text-colour !important;
 }
 
 div.dropdown .menu .item .icon {
-    color: $text-colour-dark !important
+  color: $text-colour-dark !important
 }
 
 div.dropdown .menu .item .text {
-    color: $text-colour-dark !important;
+  color: $text-colour-dark !important;
 }
 
 div.ui.selection.dropdown div.text {
-    color: rgba(0,0,0,.87) !important
+  color: rgba(0, 0, 0, .87) !important
 }
 
 .base-container-large {
-    max-width: 1600px !important;
+  max-width: 1600px !important;
 }
 
 .base-container {
-    max-width: 1400px;
-    width: calc(100% - 80px);
-    align-self: center;
-    margin: 2vh auto;
-    padding: 1vh 1vw;
-    background-color: $background-colour-darker;
+  max-width: 1400px;
+  width: calc(100% - 80px);
+  align-self: center;
+  margin: 2vh auto;
+  padding: 1vh 1vw;
+  background-color: $background-colour-darker;
 }
 
 .base-container-small {
-    max-width: 1000px !important;
+  max-width: 1000px !important;
 }
 
 .filter {
-    background-color: $background-colour-darker;
-    padding: 1vw 1vh;
+  background-color: $background-colour-darker;
+  padding: 1vw 1vh;
 }
 
 .ui.modal {
-    background-color: $background-colour-darker !important;
+  background-color: $background-colour-darker !important;
 }
 
 .ui.modal > .modal-header > .header {
-    color: $text-colour !important;
-    padding: calc(2rem - 0.142857em);
-    margin: 0;
+  color: $text-colour !important;
+  padding: calc(2rem - 0.142857em);
+  margin: 0;
 }
 
 .ui.modal > .modal-header.beatmap-edit-header {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .ui.modal > .modal-header > .modal-header-image {
-    height: 10vh;
+  height: 10vh;
 }
 
 .ui.modal > .modal-header > .modal-header-image > img {
-    opacity: 0;
-    border-radius: 5px;
+  opacity: 0;
+  border-radius: 5px;
 }
 
 .ui.modal > .content {
-    background-color: $background-colour !important;
-    color: $text-colour;
+  background-color: $background-colour !important;
+  color: $text-colour;
 }
 
 .ui.modal > .actions {
-    background-color: $background-colour-dark !important;
-    color: $text-colour;
+  background-color: $background-colour-dark !important;
+  color: $text-colour;
 }
 
 .error-message > .content > p {
-    color: $error-colour !important;
+  color: $error-colour !important;
 }
 
 .info-message > .content > p {
-    color: $info-colour !important;
+  color: $info-colour !important;
 }
 
 .scrollable-list {
-    height: 31.75vh;
-    overflow-y: scroll;
+  height: 31.75vh;
+  overflow-y: scroll;
 }
 
 .login-form {
-    padding-left: 3vw !important;
-    padding-right: 3vw !important;
+  padding-left: 3vw !important;
+  padding-right: 3vw !important;
 }
 
 .ui.form .disabled.field, .ui.form .disabled.fields .field, .ui.form .field :disabled {
-    opacity: 1 !important;
+  opacity: 1 !important;
 }
 
 .ui.form .disabled.field textarea {
-    opacity: 0.45 !important;
+  opacity: 0.45 !important;
 }
 
 .fullOverlay {
-    width: 50vw;
+  width: 50vw;
 }
 
 .ui.inverted.table {
-    background-color: $background-colour;
+  background-color: $background-colour;
 }
 
 .pushable {
-    overflow-x: unset;
+  overflow-x: unset;
 }
 
 .section {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 
-    .section-title {
-        color: $text-colour;
-        background-color: $background-colour-dark;
-        font-size: 1.8em;
-        padding: 20px;
-        text-align: left;
-        font-weight: bold;
-    }
+  .section-title {
+    color: $text-colour;
+    background-color: $background-colour-dark;
+    font-size: 1.8em;
+    padding: 20px;
+    text-align: left;
+    font-weight: bold;
+  }
 
-    .section-container {
-        background-color: $background-colour;
-        padding: 10px 20px;
-    }
+  .section-container {
+    background-color: $background-colour;
+    padding: 10px 20px;
+  }
 }
 
 @media (max-width: 767px) {
 
-    .base-container {
-        width: 100%;
-        margin: 2vh 0;
-    }
+  .base-container {
+    width: 100%;
+    margin: 2vh 0;
+  }
 
-    .pushable {
-        overflow-x: hidden;
-    }
+  .pushable {
+    overflow-x: hidden;
+  }
 
-    .modal {
-        .content {
-            .ui.grid {
-                .row {
-                    div {
-                        padding-bottom: 5px;
-                    }
-                }
-            }
-        }
-    }
-
-    .ui.fluid.buttons {
-        padding-bottom: 5px;
-    }
-
-    .ui.popup > .ui.grid.filter-settings-popup {
-        width: 80vw;
-
+  .modal {
+    .content {
+      .ui.grid {
         .row {
+          div {
             padding-bottom: 5px;
-
-            .column {
-                margin: 2px 10px;
-            }
+          }
         }
+      }
     }
+  }
+
+  .ui.fluid.buttons {
+    padding-bottom: 5px;
+  }
+
+  .ui.popup > .ui.grid.filter-settings-popup {
+    width: 80vw;
+
+    .row {
+      padding-bottom: 5px;
+
+      .column {
+        margin: 2px 10px;
+      }
+    }
+  }
 
 }
