--- a/src/App.scss
+++ b/src/App.scss
@@ -160,6 +160,23 @@ div.ui.selection.dropdown div.text {
   }
 }
 
+::-webkit-scrollbar-track
+{
+  background-color: $background-colour-lighter;
+}
+
+::-webkit-scrollbar
+{
+  width: 10px;
+  background-color: $background-colour-lighter;
+}
+
+::-webkit-scrollbar-thumb
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: $background-colour;
+}
+
 @media (max-width: 767px) {
 
   .base-container {
