- Fixed the filter for mobile - Fixed an issue where users wouldn't show for the graved and ranked pages - Added an extra information and a confirm to the delete beatmap modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -211,7 +211,7 @@ div.ui.selection.dropdown div.text {
       padding-bottom: 5px;
 
       .column {
-        margin: 2px 10px;
+        margin: 2px 0;
       }
     }
   }
