Fixed an issue where the background color was set when not needed at all

--- a/src/components/tournament/moddingDiscussion/ModdingDiscussion.scss
+++ b/src/components/tournament/moddingDiscussion/ModdingDiscussion.scss
@@ -59,6 +59,7 @@
 
     .beatmap-discussion-username {
       margin-bottom: 2px;
+      background-color: unset;
     }
 
     .beatmap-discussion-username.user-role-nat {
