--- a/src/components/beatmaps/Beatmaps.scss
+++ b/src/components/beatmaps/Beatmaps.scss
@@ -88,6 +88,7 @@ u.beatmap-status-graved {
       color: $text-colour;
 
       .beatmap-header-row {
+        font-weight: bold;
         background-color: $background-colour-dark;
       }
 
@@ -105,7 +106,7 @@ u.beatmap-status-graved {
           font-size: 1.1em;
 
           .ribbon {
-            font-size: 1.2em;
+            font-size: 1em;
           }
         }
       }
