--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -52,6 +52,7 @@
       padding: 3px 7px;
       font-size: 1.1em;
       border-radius: 5px;
+      margin-bottom: 2px;
     }
 
     .text-group-item-explanation {
@@ -169,6 +170,7 @@
       .leaderboard-item-amount {
         width: 20%;
         margin: auto;
+        text-align: center;
       }
     }
   }
