--- a/src/App.scss
+++ b/src/App.scss
@@ -142,6 +142,10 @@ div.ui.selection.dropdown div.text {
   overflow-x: unset;
 }
 
+.section:last-child {
+  margin-bottom: unset;
+}
+
 .section {
   margin-bottom: 10px;
 
@@ -188,8 +192,6 @@ div.ui.selection.dropdown div.text {
 }
 
 .table-section {
-  margin-bottom: 10px;
-
   .table-list-container {
     .grid {
       margin: 0;
