Added a refresh metadata button

--- a/src/components/beatmaps/Beatmaps.scss
+++ b/src/components/beatmaps/Beatmaps.scss
@@ -83,6 +83,10 @@ u.beatmap-status-graved {
   max-width: 8vw;
 }
 
+.metadata-value {
+  font-size: 1.1em;
+}
+
 @media (max-width: 767px) {
   .beatmap-banner {
     min-width: 100%;
