Did some small styling on the navigation bar

--- a/src/Colours.scss
+++ b/src/Colours.scss
@@ -1,3 +1,4 @@
+$text-colour-light: #fcfcfc;
 $text-colour: #d7d7d7;
 $text-colour-dark: #262626;
 $text-colour-link: #729ca8;
@@ -34,6 +35,8 @@ $background-colour-dark: #1B1C29;
 $background-colour-darker: #181824;
 $background-colour-bg: #14151f;*/
 
+$osu-colour-dark: #cc5288;
+$osu-colour-darker: #bb1177;
 $bn-colour: #7249A5;
 $pbn-colour: #995BA5;
 $nat-colour: #A53D3C;
