--- a/src/components/beatmaps/Beatmaps.scss
+++ b/src/components/beatmaps/Beatmaps.scss
@@ -1,5 +1,10 @@
 @import "./src/Colours";
 
+.beatmap-status-unfinished {
+  background-color: #6253a5 !important;
+  color: #d7d7d7 !important;
+}
+
 .beatmap-status-pending {
   background-color: #538ea5 !important;
   color: #d7d7d7 !important;
@@ -38,6 +43,11 @@
 u.beatmap-status-unknown {
   background-color: rgba(0, 0, 0, 0) !important;
   color: #c3c3c3 !important;
+}
+
+u.beatmap-status-unfinished {
+  background-color: rgba(0, 0, 0, 0) !important;
+  color: #8367d0 !important;
 }
 
 u.beatmap-status-pending {
